open graph card update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph Protocol -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Starbucks" />
+    <meta property="og:title" content="Starbucks Coffee Korea" />
+    <meta
+      property="og:description"
+      content="More than just great coffee. Explore the menu, sign up for Starbucks® Rewards, manage your gift card and more."
+    />
+    <meta property="og:image" content="./images/starbucks_seo.jpg" />
+    <meta
+      property="og:url"
+      content="https://my-starbucks-clone-proj.netlify.app/"
+    />
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="Starbucks" />
+    <meta property="twitter:title" content="Starbucks Coffee Korea" />
+    <meta
+      property="twitter:description"
+      content="More than just great coffee. Explore the menu, sign up for Starbucks® Rewards, manage your gift card and more."
+    />
+    <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
+    <meta
+      property="twitter:url"
+      content="https://my-starbucks-clone-proj.netlify.app/"
+    />
     <title>Starbucks Korea</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link
@@ -13,6 +41,6 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    hello
+    hello my wirld
   </body>
 </html>
