--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <meta property="og:title" content="Starbucks Coffee Korea" />
     <meta
       property="og:description"
-      content="More than just great coffee. Explore the menu, sign up for Starbucks® Rewards, manage your gift card and more."
+      content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
     <meta property="og:image" content="./images/starbucks_seo.jpg" />
-    <meta
-      property="og:url"
-      content="https://my-starbucks-clone-proj.netlify.app/"
-    />
+    <meta property="og:url" content="https://starbucks.co.kr" />
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary" />
