open graph card update

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    hello my wirld
+    hello my world
   </body>
 </html>
