--- a/index.html
+++ b/index.html
@@ -33,14 +33,33 @@
       content="https://my-starbucks-clone-proj1.netlify.app/"
     />
     <title>Starbucks Korea</title>
+
+    <!-- favicon -->
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
+
+    <!-- reset css -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
+    />
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Google Material Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     hello my world
+    <div class="material-icons">search</div>
   </body>
 </html>
