--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    hello my world
-    <div class="material-icons">search</div>
+    <!-- Header -->
+    <header>
+      <div class="inner">
+        <!-- move to main page -->
+        <a href="/" class="logo">
+          <img src="./images/starbucks_logo.png" alt="STARBUCKS" />
+        </a>
+      </div>
+    </header>
   </body>
 </html>
