--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="./css/main.css" />
+    <script defer src="./javascript/main.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -66,6 +67,26 @@
         <a href="/" class="logo">
           <img src="./images/starbucks_logo.png" alt="STARBUCKS" />
         </a>
+        <div class="sub-menu">
+          <ul class="menu">
+            <li>
+              <a href="/signin">Sign In</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)">My Starbucks</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)">Customer Service & Ideas</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)">Find a Store</a>
+            </li>
+          </ul>
+          <div class="search">
+            <input type="text" />
+            <div class="material-icons">search</div>
+          </div>
+        </div>
       </div>
     </header>
   </body>
