:bulb:section separate

--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
       </div>
     </section>
 
+    <!-- NOTICE -->
     <section class="notice">
       <div class="notice-line">
         <div class="bg-left"></div>
