--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <script defer src="./javascript/main.js"></script>
+    <script defer src="./javascript/youtube.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -556,6 +557,14 @@
           <div class="btn gift">e-Gift 선물하기</div>
         </div>
       </div>
+    </section>
+
+    <!-- YOUTUBE -->
+    <section class="youtube">
+      <div class="youtube__area">
+        <div id="player"></div>
+      </div>
+      <div class="youtube__cover"></div>
     </section>
   </body>
 </html>
