--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <script defer src="./javascript/main.js"></script>
-    <script defer src="./javascript/youtube.js"></script>
+    <!-- <script defer src="./javascript/youtube.js"></script> -->
   </head>
   <body>
     <!-- Header -->
@@ -565,6 +565,23 @@
         <div id="player"></div>
       </div>
       <div class="youtube__cover"></div>
+      <div class="inner">
+        <img
+          src="./images/floating1.png"
+          alt="icon1"
+          class="floating floating1"
+        />
+        <img
+          src="./images/floating2.png"
+          alt="icon2"
+          class="floating floating2"
+        />
+        <img
+          src="./images/floating3.png"
+          alt="icon3"
+          class="floating floating3"
+        />
+      </div>
     </section>
   </body>
 </html>
