--- a/index.html
+++ b/index.html
@@ -615,5 +615,18 @@
         <img src="./images/reserve_image.png" alt="" class="product" />
       </div>
     </section>
+
+    <!-- PICK favorite -->
+    <section class="pick-favorite">
+      <div class="inner">
+        <div class="text-group">
+          <img src="./images/favorite_text1.png" alt="" class="title" />
+          <img src="./images/favorite_text2.png" alt="" class="description" />
+          <div class="more">
+            <a href="javascript:void(0)" class="btn btn--white">자세히보기</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
