--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@
       href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"
     />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
+      integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script defer src="./javascript/main.js"></script>
-    <!-- <script defer src="./javascript/youtube.js"></script> -->
+    <script defer src="./javascript/youtube.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -580,22 +586,30 @@
     </section>
 
     <!-- Season-product -->
-    <section class="season-product">
+    <section class="season-product scroll-spy">
       <div class="inner">
         <img
           src="./images/floating3.png"
           alt="icon3"
           class="floating floating3"
         />
-        <img src="./images/season_product_image.png" alt="" class="product" />
+        <img
+          src="./images/season_product_image.png"
+          alt=""
+          class="product back-to-position to-right"
+        />
         <div class="text-group">
-          <img src="./images/season_product_text1.png" alt="" class="title" />
+          <img
+            src="./images/season_product_text1.png"
+            alt=""
+            class="title back-to-position to-left"
+          />
           <img
             src="./images/season_product_text2.png"
             alt=""
-            class="description"
+            class="description back-to-position to-left"
           />
-          <div class="more">
+          <div class="more back-to-position to-left">
             <a href="javascript:void(0)" class="btn">자세히보기</a>
           </div>
         </div>
@@ -603,11 +617,19 @@
     </section>
 
     <!-- RESERVE COFFEE -->
-    <section class="reserve-coffee">
+    <section class="reserve-coffee scroll-spy">
       <div class="inner">
-        <img src="./images/reserve_logo.png" alt="" class="reserve-logo" />
+        <img
+          src="./images/reserve_logo.png"
+          alt=""
+          class="reserve-logo back-to-position to-right"
+        />
         <div class="text-group">
-          <img src="./images/reserve_text.png" alt="" class="description" />
+          <img
+            src="./images/reserve_text.png"
+            alt=""
+            class="description back-to-position to-right"
+          />
           <div class="more">
             <a href="javascript:void(0)" class="btn btn--gold">자세히보기</a>
           </div>
@@ -617,12 +639,20 @@
     </section>
 
     <!-- PICK favorite -->
-    <section class="pick-favorite">
+    <section class="pick-favorite scroll-spy">
       <div class="inner">
         <div class="text-group">
-          <img src="./images/favorite_text1.png" alt="" class="title" />
-          <img src="./images/favorite_text2.png" alt="" class="description" />
-          <div class="more">
+          <img
+            src="./images/favorite_text1.png"
+            alt=""
+            class="title back-to-position to-right"
+          />
+          <img
+            src="./images/favorite_text2.png"
+            alt=""
+            class="description back-to-position to-right"
+          />
+          <div class="more back-to-position to-right">
             <a href="javascript:void(0)" class="btn btn--white">자세히보기</a>
           </div>
         </div>
@@ -638,7 +668,41 @@
           </div>
           <div class="back">
             <img src="./images/reserve_store_medal_back.png" alt="" />
-            <a href="javascript:void(0)" class="btn">매장안내</a>
+            <a href="javascript:void(0)" class="btn">매장보기</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FIND STORE -->
+    <section class="find-store scroll-spy">
+      <div class="inner">
+        <img src="./images/find_store_texture1.png" alt="" class="texture1" />
+        <img src="./images/find_store_texture2.png" alt="" class="texture2" />
+        <img
+          src="./images/find_store_picture1.jpg"
+          alt=""
+          class="picture picture1 back-to-position to-right"
+        />
+        <img
+          src="./images/find_store_picture2.jpg"
+          alt=""
+          class="picture picture2 back-to-position to-right"
+        />
+
+        <div class="text-group">
+          <img
+            src="./images/find_store_text1.png"
+            alt=""
+            class="title back-to-position to-left"
+          />
+          <img
+            src="./images/find_store_text2.png"
+            alt=""
+            class="description back-to-position to-left"
+          />
+          <div class="more back-to-position to-left">
+            <a href="javascript:void(0)" class="btn">매장찾기</a>
           </div>
         </div>
       </div>
