--- a/index.html
+++ b/index.html
@@ -701,9 +701,55 @@
             alt=""
             class="description back-to-position to-left"
           />
-          <div class="more back-to-position to-left">
+          <div class="more">
             <a href="javascript:void(0)" class="btn">매장찾기</a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Awards-->
+    <section class="awards">
+      <div class="inner">
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./images/awards_slide1.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide2.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide3.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide4.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide5.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide6.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide7.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide8.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide9.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide10.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="swiper-prev">
+          <div class="material-icons">arrow_back</div>
+        </div>
+        <div class="swiper-next">
+          <div class="material-icons">arrow_forward</div>
         </div>
       </div>
     </section>
