:sparkles:update footer section

--- a/index.html
+++ b/index.html
@@ -790,11 +790,10 @@
         </div>
         <p class="copywrite">
           &copy;
-          <span class="this-year"
-            >Starbucks Coffee Company. All Rights Reserved.</span
-          >
+          <span class="this-year"></span> Starbucks Coffee Company. All Rights
+          Reserved.
         </p>
-        <img src="./images/starbucks_logo.png" alt="" class="logo" />
+        <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
       </div>
     </footer>
   </body>
