--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js"
+      integrity="sha512-tQFq+nb/TSS648SDzWbSj0A67t4I1PFzR0U6Oi/yEYFyUbAIwg74SOCbr7t2X1Rn+iln7sYwfh8y+z7p0gddOw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script defer src="./javascript/main.js"></script>
     <script defer src="./javascript/youtube.js"></script>
   </head>
@@ -796,5 +802,9 @@
         <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
       </div>
     </footer>
+
+    <div id="to-top">
+      <div class="material-icons">arrow_upward</div>
+    </div>
   </body>
 </html>
