:wrench:seperate common cssand js files

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
 
     <!-- script tag -->
@@ -88,6 +89,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script defer src="./javascript/common.js"></script>
     <script defer src="./javascript/main.js"></script>
     <script defer src="./javascript/youtube.js"></script>
   </head>
@@ -102,7 +104,7 @@
         <div class="sub-menu">
           <ul class="menu">
             <li>
-              <a href="/signin">Sign In</a>
+              <a href="./signin/index.html">Sign In</a>
             </li>
             <li>
               <a href="javascript:void(0)">My Starbucks</a>
